RESOLVED FIXED203718
Fix build when WTF_CPU_NEEDS_ALIGNED_ACCESS=1 after r251886
https://bugs.webkit.org/show_bug.cgi?id=203718
Summary Fix build when WTF_CPU_NEEDS_ALIGNED_ACCESS=1 after r251886
Tadeu Zagallo
Reported 2019-10-31 20:08:49 PDT
...
Attachments
Patch (1.77 KB, patch)
2019-10-31 20:10 PDT, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2019-10-31 20:10:44 PDT
Yusuke Suzuki
Comment 2 2019-10-31 20:13:56 PDT
Comment on attachment 382542 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-10-31 21:00:39 PDT
Comment on attachment 382542 [details] Patch Clearing flags on attachment: 382542 Committed r251906: <https://trac.webkit.org/changeset/251906>
WebKit Commit Bot
Comment 4 2019-10-31 21:00:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-10-31 21:01:18 PDT
Note You need to log in before you can comment on or make changes to this bug.