Fix build when WTF_CPU_NEEDS_ALIGNED_ACCESS=1 after r251886 https://bugs.webkit.org/show_bug.cgi?id=203718

Reviewed by Yusuke Suzuki.

* bytecompiler/BytecodeGeneratorBaseInlines.h:
(JSC::BytecodeGeneratorBase<Traits>::alignWideOpcode16):
(JSC::BytecodeGeneratorBase<Traits>::alignWideOpcode32):


Canonical link: https://commits.webkit.org/217084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251906 268f45cc-cd09-0410-ab3c-d52691b4dbfc